--- a/apps/static-challenges/src/app/not-found/page.css
+++ b/apps/static-challenges/src/app/not-found/page.css
@@ -4,6 +4,7 @@
 
   display: flex;
   flex-direction: column;
+  row-gap: 2rem;
   justify-content: space-between;
   min-height: 100vh;
 }
@@ -16,7 +17,6 @@
   color: var(--text-primary-color);
   
   padding-top: clamp(1.25rem, 5vw, 2.5rem);
-  padding-bottom: clamp(1.25rem, 5vw, 2.5rem);
   padding-left: clamp(1.5rem, 5vw, 4.8125rem);
   padding-right: clamp(1.5rem, 5vw, 4.8125rem);
 }
@@ -31,15 +31,26 @@
   max-width: 80rem;
   margin: 0 auto;
 
-  @media (min-width: 768px) {
+  @media (min-width: 50rem) {
     flex-direction: row;
+  }
+}
+
+.left-section {
+  width: 100%;
+  margin: 0 auto;
+  aspect-ratio: 539/447;
+  max-width: 18rem;
+  
+  @media (min-width: 50rem) {
+    max-width: 33.75rem;
   }
 }
 
 .right-section {
   display: flex;
   flex-direction: column;
-  row-gap: 2.25rem;
+  row-gap: clamp(1.875rem, 5vw, 2.25rem);
 }
 
 .right-section__title {
