--- a/apps/static-challenges/not-found/style.css
+++ b/apps/static-challenges/not-found/style.css
@@ -53,12 +53,22 @@
 .left__section {
   width: 100%;
   margin: 0 auto;
+  position: relative;
   aspect-ratio: 539/447;
   max-width: 18rem;
 
   @media (min-width: 50rem) {
     max-width: 33.75rem;
   }
+}
+
+.left__section__image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  position: absolute;
+  inset: 0;
 }
 
 .right__section {
