update(static-challenge): interior-consultant
- error in css property

--- a/apps/static-challenges/interior-consultant/style.css
+++ b/apps/static-challenges/interior-consultant/style.css
@@ -160,7 +160,7 @@ ul {
   @media (min-width: 37.5rem) {
     flex-direction: row;
     justify-content: space-between;
-    aling-items: center;
+    align-items: center;
     column-gap: 2rem;
   }
 }
